--- a/dev/index.html
+++ b/dev/index.html
@@ -10,7 +10,7 @@ equation = BetaScalingEquation(λ, ϵ, t0)
 sol = solve(equation, TimeDoublingSolver(t_max=10^4.))
 plot(log10.(sol.t), log10.(abs.(sol.F)), ylabel=&quot;log_{10}(|g(t)|)&quot;, xlabel=&quot;log_{10}(t)&quot;, label=&quot;g(t)&quot;)</code></pre><p><img src="images/beta.png" alt="image"/></p><p>In the figure, the slopes of the straight lines are given by the parameters <span>$-a$</span> and <span>$b$</span>, which describe the relaxation towards and away from the plateau value of the correlator. These exponents are automatically computed, and are stored in <code>equation.coeff.a</code> and <code>equation.coeff.b</code>.</p><h2 id="References"><a class="docs-heading-anchor" href="#References">References</a><a id="References-1"></a><a class="docs-heading-anchor-permalink" href="#References" title="Permalink"></a></h2><p>Götze, J Phys Condens Matter 2, 8485 (1990)</p><h2 id="Stochastic-Beta-Relaxation-(SBR)"><a class="docs-heading-anchor" href="#Stochastic-Beta-Relaxation-(SBR)">Stochastic Beta-Relaxation (SBR)</a><a id="Stochastic-Beta-Relaxation-(SBR)-1"></a><a class="docs-heading-anchor-permalink" href="#Stochastic-Beta-Relaxation-(SBR)" title="Permalink"></a></h2><p>SBR is an extension of the beta-scaling equation, where the parameter <span>$\sigma$</span> becomes quenched disorder, and a diffusive term is added <span>$\sigma(x) + \alpha \nabla^2 g(x,t) - \delta t + \lambda (g(x,t))^2 = \partial_t \int g(x,t-\tau)g(x,\tau)d\tau$</span></p><p>This is implemented in 1, 2, and 3 dimensions with periodic boundaries. Example:</p><pre><code class="language-julia hljs">using ModeCouplingTheory, MCTBetaScaling, Plots, Random
 L_sys = 100.0 ## physical size of the system
-n = 500 ## number of sites on one side of the lattice
+n = 100 ## number of sites on one side of the lattice
 dims = 2 
 Ls = ntuple(i -&gt; L_sys,  dims)  # Lattice size in each dimension
 ns = ntuple(i -&gt; n, dims)  # Number of sites in each dimension of the lattice
@@ -19,22 +19,23 @@ Random.seed!(52342)
 α = 0.1
 t₀ = 0.001
 σ0 = 0.05 # target σ
-delta_σ2 = 0.1  # desired variance
+delta_σ = 0.1  # desired standard deviation (sqrt of var)
 dx = L_sys/n
 
 # small random variations near σ = 0. 
-# We divide by dx^2 to get the proper discretization of the delta function
-σ_vec = [σ0 + delta_σ2/dx^2*randn() for i in 1:prod(ns)]  
+# We divide std by dx get the proper discretization of the delta function
+σ_vec = [σ0 + delta_σ/dx*randn() for i in 1:prod(ns)]  
 
 eqn_sys = MCTBetaScaling.StochasticBetaScalingEquation(λ, α, σ_vec, t₀, Ls, ns)
-solver = TimeDoublingSolver(t_max=10^10., verbose=true, tolerance=1e-10, N=16, Δt=1e-5)
+solver = TimeDoublingSolver(t_max=10^10., verbose=true, tolerance=1e-10, N=16, Δt=1e-10)
 sol = solve(eqn_sys, solver)
 
 p = plot(xlabel=&quot;t&quot;, xscale=:log10, yscale=:log10, ylabel=&quot;g(x,t)&quot;, xlims=(10^-5, 10^10), ylims=(10^-3, 10^2))
 for i in 1:100:length(σ_vec) # plot 100 out of the 10000 curves
     plot!(p, sol.t[2:end], abs.(get_F(sol, 2:length(sol.t), i)), label=nothing)
 end
-display(p)</code></pre><p><img src="images/SBR.png" alt="image"/></p><p>We can make a heatmap for different values of <code>t</code> to show the progression of the beta-relaxation.</p><pre><code class="language-julia hljs">t = get_t(sol)
+display(p)
+</code></pre><p><img src="images/SBR.png" alt="image"/></p><p>We can make a heatmap for different values of <code>t</code> to show the progression of the beta-relaxation.</p><pre><code class="language-julia hljs">t = get_t(sol)
 Nt = length(t)
 F = F = get_F(sol, :, :) |&gt; stack; # gives a matrix of n^3 x Nt
 F = reshape(F, (n,n,Nt)); # array of (n,n,Nt)
@@ -46,4 +47,4 @@ for ti = 10.0 .^ (-1:10)
     push!(ps, p_i)
 end
 p = plot(ps..., size=(1200,900))
-</code></pre><p><img src="images/SBR_hm.png" alt="image"/></p></article><nav class="docs-footer"><a class="docs-footer-nextpage" href="API/">API »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="auto">Automatic (OS)</option><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option><option value="catppuccin-latte">catppuccin-latte</option><option value="catppuccin-frappe">catppuccin-frappe</option><option value="catppuccin-macchiato">catppuccin-macchiato</option><option value="catppuccin-mocha">catppuccin-mocha</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 1.14.1 on <span class="colophon-date" title="Tuesday 9 September 2025 09:40">Tuesday 9 September 2025</span>. Using Julia version 1.11.6.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+</code></pre><p><img src="images/SBR_hm.png" alt="image"/></p></article><nav class="docs-footer"><a class="docs-footer-nextpage" href="API/">API »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="auto">Automatic (OS)</option><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option><option value="catppuccin-latte">catppuccin-latte</option><option value="catppuccin-frappe">catppuccin-frappe</option><option value="catppuccin-macchiato">catppuccin-macchiato</option><option value="catppuccin-mocha">catppuccin-mocha</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 1.14.1 on <span class="colophon-date" title="Tuesday 9 September 2025 09:59">Tuesday 9 September 2025</span>. Using Julia version 1.11.6.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
